--- a/SCRISPTS/Audit_via_python.ipynb
+++ b/SCRISPTS/Audit_via_python.ipynb
@@ -11,6 +11,337 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "629e6987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/yfinance/scrapers/fundamentals.py:120: Pandas4Warning: Timestamp.utcnow is deprecated and will be removed in a future version. Use Timestamp.now('UTC') instead.\n",
+      "  end = pd.Timestamp.utcnow().ceil(\"D\")\n",
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/yfinance/scrapers/fundamentals.py:120: Pandas4Warning: Timestamp.utcnow is deprecated and will be removed in a future version. Use Timestamp.now('UTC') instead.\n",
+      "  end = pd.Timestamp.utcnow().ceil(\"D\")\n",
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/yfinance/scrapers/fundamentals.py:120: Pandas4Warning: Timestamp.utcnow is deprecated and will be removed in a future version. Use Timestamp.now('UTC') instead.\n",
+      "  end = pd.Timestamp.utcnow().ceil(\"D\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded yfinance QUARTERLY statements for: AAPL\n",
+      "Income shape: (33, 5)\n",
+      "Balance sheet shape: (65, 6)\n",
+      "Cashflow shape: (46, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP 1 — Setup (10Y version)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import yfinance as yf\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "ticker = \"AAPL\"\n",
+    "tkr = yf.Ticker(ticker)\n",
+    "\n",
+    "# ✅ Quarterly statements (gives a longer history than annual)\n",
+    "income = tkr.quarterly_financials\n",
+    "bs = tkr.quarterly_balance_sheet\n",
+    "cf = tkr.quarterly_cashflow\n",
+    "\n",
+    "print(\"✅ Loaded yfinance QUARTERLY statements for:\", ticker)\n",
+    "print(\"Income shape:\", income.shape)\n",
+    "print(\"Balance sheet shape:\", bs.shape)\n",
+    "print(\"Cashflow shape:\", cf.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46dfa3ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== INCOME STATEMENT rows (first 40) ===\n",
+      "['Tax Effect Of Unusual Items', 'Tax Rate For Calcs', 'Normalized EBITDA', 'Net Income From Continuing Operation Net Minority Interest', 'Reconciled Depreciation', 'Reconciled Cost Of Revenue', 'EBITDA', 'EBIT', 'Normalized Income', 'Net Income From Continuing And Discontinued Operation', 'Total Expenses', 'Total Operating Income As Reported', 'Diluted Average Shares', 'Basic Average Shares', 'Diluted EPS', 'Basic EPS', 'Diluted NI Availto Com Stockholders', 'Net Income Common Stockholders', 'Net Income', 'Net Income Including Noncontrolling Interests', 'Net Income Continuous Operations', 'Tax Provision', 'Pretax Income', 'Other Income Expense', 'Other Non Operating Income Expenses', 'Operating Income', 'Operating Expense', 'Research And Development', 'Selling General And Administration', 'Gross Profit', 'Cost Of Revenue', 'Total Revenue', 'Operating Revenue']\n",
+      "Columns (dates): [Timestamp('2025-12-31 00:00:00'), Timestamp('2025-09-30 00:00:00'), Timestamp('2025-06-30 00:00:00'), Timestamp('2025-03-31 00:00:00'), Timestamp('2024-12-31 00:00:00')] ...\n",
+      "\n",
+      "=== BALANCE SHEET rows (first 40) ===\n",
+      "['Ordinary Shares Number', 'Share Issued', 'Net Debt', 'Total Debt', 'Tangible Book Value', 'Invested Capital', 'Working Capital', 'Net Tangible Assets', 'Common Stock Equity', 'Total Capitalization', 'Total Equity Gross Minority Interest', 'Stockholders Equity', 'Gains Losses Not Affecting Retained Earnings', 'Other Equity Adjustments', 'Retained Earnings', 'Capital Stock', 'Common Stock', 'Total Liabilities Net Minority Interest', 'Total Non Current Liabilities Net Minority Interest', 'Other Non Current Liabilities', 'Tradeand Other Payables Non Current', 'Long Term Debt And Capital Lease Obligation', 'Long Term Debt', 'Current Liabilities', 'Other Current Liabilities', 'Current Deferred Liabilities', 'Current Deferred Revenue', 'Current Debt And Capital Lease Obligation', 'Current Debt', 'Other Current Borrowings', 'Commercial Paper', 'Payables And Accrued Expenses', 'Current Accrued Expenses', 'Payables', 'Total Tax Payable', 'Income Tax Payable', 'Accounts Payable', 'Total Assets', 'Total Non Current Assets', 'Other Non Current Assets']\n",
+      "Columns (dates): [Timestamp('2025-12-31 00:00:00'), Timestamp('2025-09-30 00:00:00'), Timestamp('2025-06-30 00:00:00'), Timestamp('2025-03-31 00:00:00'), Timestamp('2024-12-31 00:00:00'), Timestamp('2024-09-30 00:00:00')] ...\n",
+      "\n",
+      "=== CASHFLOW rows (first 40) ===\n",
+      "['Free Cash Flow', 'Repurchase Of Capital Stock', 'Repayment Of Debt', 'Issuance Of Debt', 'Capital Expenditure', 'Income Tax Paid Supplemental Data', 'End Cash Position', 'Beginning Cash Position', 'Changes In Cash', 'Financing Cash Flow', 'Cash Flow From Continuing Financing Activities', 'Net Other Financing Charges', 'Cash Dividends Paid', 'Common Stock Dividend Paid', 'Net Common Stock Issuance', 'Common Stock Payments', 'Net Issuance Payments Of Debt', 'Net Short Term Debt Issuance', 'Short Term Debt Payments', 'Net Long Term Debt Issuance', 'Long Term Debt Payments', 'Long Term Debt Issuance', 'Investing Cash Flow', 'Cash Flow From Continuing Investing Activities', 'Net Other Investing Changes', 'Net Investment Purchase And Sale', 'Sale Of Investment', 'Purchase Of Investment', 'Net PPE Purchase And Sale', 'Purchase Of PPE', 'Operating Cash Flow', 'Cash Flow From Continuing Operating Activities', 'Change In Working Capital', 'Change In Other Current Liabilities', 'Change In Other Current Assets', 'Change In Payables And Accrued Expense', 'Change In Payable', 'Change In Account Payable', 'Change In Inventory', 'Change In Receivables']\n",
+      "Columns (dates): [Timestamp('2025-12-31 00:00:00'), Timestamp('2025-09-30 00:00:00'), Timestamp('2025-06-30 00:00:00'), Timestamp('2025-03-31 00:00:00'), Timestamp('2024-12-31 00:00:00'), Timestamp('2024-09-30 00:00:00'), Timestamp('2024-06-30 00:00:00')] ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP 2 — Inspect available row names (10Y / quarterly)\n",
+    "# (same idea, just keep it clean + show how many rows/cols you have)\n",
+    "\n",
+    "print(\"=== INCOME STATEMENT rows (first 40) ===\")\n",
+    "print(income.index.tolist()[:40])\n",
+    "print(\"Columns (dates):\", list(income.columns[:8]), \"...\")\n",
+    "\n",
+    "print(\"\\n=== BALANCE SHEET rows (first 40) ===\")\n",
+    "print(bs.index.tolist()[:40])\n",
+    "print(\"Columns (dates):\", list(bs.columns[:8]), \"...\")\n",
+    "\n",
+    "print(\"\\n=== CASHFLOW rows (first 40) ===\")\n",
+    "print(cf.index.tolist()[:40])\n",
+    "print(\"Columns (dates):\", list(cf.columns[:8]), \"...\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3e3ffbd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Income quarters: 5\n",
+      "Balance sheet quarters: 6\n",
+      "Cashflow quarters: 7\n",
+      "\n",
+      "Income date range: 2024-12-31 00:00:00 → 2025-12-31 00:00:00\n",
+      "BS date range: 2024-09-30 00:00:00 → 2025-12-31 00:00:00\n",
+      "CF date range: 2024-06-30 00:00:00 → 2025-12-31 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP 3 FIX — You don't have 10Y because yfinance quarterly fundamentals are LIMITED.\n",
+    "# Let's CHECK how many quarters you actually received, then build \"as much history as available\".\n",
+    "\n",
+    "print(\"Income quarters:\", len(income.columns))\n",
+    "print(\"Balance sheet quarters:\", len(bs.columns))\n",
+    "print(\"Cashflow quarters:\", len(cf.columns))\n",
+    "\n",
+    "print(\"\\nIncome date range:\", min(income.columns), \"→\", max(income.columns))\n",
+    "print(\"BS date range:\", min(bs.columns), \"→\", max(bs.columns))\n",
+    "print(\"CF date range:\", min(cf.columns), \"→\", max(cf.columns))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84e0145f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Fiscal years available: [2025, 2026]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_42882/2629448289.py:13: Pandas4Warning: Sorting by default when concatenating all DatetimeIndex is deprecated.  In the future, pandas will respect the default of `sort=False`. Specify `sort=True` or `sort=False` to silence this message. If you see this warnings when not directly calling concat, report a bug to pandas.\n",
+      "  q = pd.concat([\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>net_income</th>\n",
+       "      <th>ebit</th>\n",
+       "      <th>fcf</th>\n",
+       "      <th>buybacks</th>\n",
+       "      <th>capex</th>\n",
+       "      <th>dividends_paid</th>\n",
+       "      <th>assets</th>\n",
+       "      <th>equity</th>\n",
+       "      <th>total_debt</th>\n",
+       "      <th>diluted_shares</th>\n",
+       "      <th>net_margin</th>\n",
+       "      <th>roe</th>\n",
+       "      <th>leverage</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>buybacks_to_fcf</th>\n",
+       "      <th>asset_turnover</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fiscal_year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025</th>\n",
+       "      <td>4.161610e+11</td>\n",
+       "      <td>1.120100e+11</td>\n",
+       "      <td>1.330500e+11</td>\n",
+       "      <td>9.876700e+10</td>\n",
+       "      <td>-9.071100e+10</td>\n",
+       "      <td>-1.271500e+10</td>\n",
+       "      <td>-1.542100e+10</td>\n",
+       "      <td>3.592410e+11</td>\n",
+       "      <td>7.373300e+10</td>\n",
+       "      <td>9.865700e+10</td>\n",
+       "      <td>1.486361e+10</td>\n",
+       "      <td>0.269151</td>\n",
+       "      <td>1.519130</td>\n",
+       "      <td>4.872187</td>\n",
+       "      <td>7.535855</td>\n",
+       "      <td>-0.918434</td>\n",
+       "      <td>1.158445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2026</th>\n",
+       "      <td>1.437560e+11</td>\n",
+       "      <td>4.209700e+10</td>\n",
+       "      <td>5.085200e+10</td>\n",
+       "      <td>5.155200e+10</td>\n",
+       "      <td>-2.470100e+10</td>\n",
+       "      <td>-2.373000e+09</td>\n",
+       "      <td>-3.921000e+09</td>\n",
+       "      <td>3.792970e+11</td>\n",
+       "      <td>8.819000e+10</td>\n",
+       "      <td>9.050900e+10</td>\n",
+       "      <td>1.481036e+10</td>\n",
+       "      <td>0.292836</td>\n",
+       "      <td>0.477344</td>\n",
+       "      <td>4.300907</td>\n",
+       "      <td>2.842403</td>\n",
+       "      <td>-0.479147</td>\n",
+       "      <td>0.379006</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  revenue    net_income          ebit           fcf  \\\n",
+       "fiscal_year                                                           \n",
+       "2025         4.161610e+11  1.120100e+11  1.330500e+11  9.876700e+10   \n",
+       "2026         1.437560e+11  4.209700e+10  5.085200e+10  5.155200e+10   \n",
+       "\n",
+       "                 buybacks         capex  dividends_paid        assets  \\\n",
+       "fiscal_year                                                             \n",
+       "2025        -9.071100e+10 -1.271500e+10   -1.542100e+10  3.592410e+11   \n",
+       "2026        -2.470100e+10 -2.373000e+09   -3.921000e+09  3.792970e+11   \n",
+       "\n",
+       "                   equity    total_debt  diluted_shares  net_margin       roe  \\\n",
+       "fiscal_year                                                                     \n",
+       "2025         7.373300e+10  9.865700e+10    1.486361e+10    0.269151  1.519130   \n",
+       "2026         8.819000e+10  9.050900e+10    1.481036e+10    0.292836  0.477344   \n",
+       "\n",
+       "             leverage       eps  buybacks_to_fcf  asset_turnover  \n",
+       "fiscal_year                                                       \n",
+       "2025         4.872187  7.535855        -0.918434        1.158445  \n",
+       "2026         4.300907  2.842403        -0.479147        0.379006  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# STEP 3 (robust) — build annual from whatever quarters exist (no forced 10Y)\n",
+    "\n",
+    "def pick_q(df, row_name, col_name):\n",
+    "    s = df.loc[row_name]\n",
+    "    s.index = pd.to_datetime(s.index)\n",
+    "    s = pd.to_numeric(s, errors=\"coerce\").sort_index()\n",
+    "    s.name = col_name\n",
+    "    return s\n",
+    "\n",
+    "def fiscal_year_from_date(dt):\n",
+    "    return dt.year + (1 if dt.month >= 10 else 0)\n",
+    "\n",
+    "q = pd.concat([\n",
+    "    pick_q(income, \"Total Revenue\", \"revenue\"),\n",
+    "    pick_q(income, \"Net Income\", \"net_income\"),\n",
+    "    pick_q(income, \"EBIT\", \"ebit\"),\n",
+    "    pick_q(income, \"Diluted Average Shares\", \"diluted_shares\"),\n",
+    "\n",
+    "    pick_q(bs, \"Total Assets\", \"assets\"),\n",
+    "    pick_q(bs, \"Stockholders Equity\", \"equity\"),\n",
+    "    pick_q(bs, \"Total Debt\", \"total_debt\"),\n",
+    "\n",
+    "    pick_q(cf, \"Free Cash Flow\", \"fcf\"),\n",
+    "    pick_q(cf, \"Repurchase Of Capital Stock\", \"buybacks\"),\n",
+    "    pick_q(cf, \"Capital Expenditure\", \"capex\"),\n",
+    "    pick_q(cf, \"Cash Dividends Paid\", \"dividends_paid\"),\n",
+    "], axis=1)\n",
+    "\n",
+    "q[\"fiscal_year\"] = [fiscal_year_from_date(d) for d in q.index]\n",
+    "\n",
+    "flow_cols = [\"revenue\",\"net_income\",\"ebit\",\"fcf\",\"buybacks\",\"capex\",\"dividends_paid\"]\n",
+    "stock_cols = [\"assets\",\"equity\",\"total_debt\",\"diluted_shares\"]\n",
+    "\n",
+    "annual_flow = q.groupby(\"fiscal_year\")[flow_cols].sum(min_count=1)\n",
+    "annual_stock = q.groupby(\"fiscal_year\")[stock_cols].last()\n",
+    "\n",
+    "data = annual_flow.join(annual_stock, how=\"inner\").sort_index()\n",
+    "\n",
+    "# drop any fully-empty fiscal year (like your 2024 NaN row)\n",
+    "data = data.dropna(subset=[\"revenue\",\"net_income\",\"assets\",\"equity\"], how=\"any\")\n",
+    "\n",
+    "# derived metrics\n",
+    "data[\"net_margin\"] = data[\"net_income\"] / data[\"revenue\"]\n",
+    "data[\"roe\"] = data[\"net_income\"] / data[\"equity\"]\n",
+    "data[\"leverage\"] = data[\"assets\"] / data[\"equity\"]\n",
+    "data[\"eps\"] = data[\"net_income\"] / data[\"diluted_shares\"]\n",
+    "data[\"buybacks_to_fcf\"] = data[\"buybacks\"] / data[\"fcf\"]\n",
+    "data[\"asset_turnover\"] = data[\"revenue\"] / data[\"assets\"]\n",
+    "\n",
+    "print(\"✅ Fiscal years available:\", data.index.tolist())\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "4392d1c2",
    "metadata": {},
    "outputs": [
